--- a/index.html
+++ b/index.html
@@ -1,1 +1,302 @@
-HEllo val
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Valentin Ekeu Tiemeni</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+
+  <!-- Custom styles -->
+  <link href="css/resume.min.css" rel="stylesheet">
+
+</head>
+
+<body id="page-top">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">Valentin Ekeu</span>
+      <span class="d-none d-lg-block">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+      </span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">About Valentin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+        </li>
+		<li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#contact">Contact Me</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container-fluid p-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+      <div class="w-100">
+        <h1 class="mb-0">Valentin
+          <span class="text-primary">Ekeu</span>
+        </h1>
+        <div class="subheading mb-5">1825 Belle Haven Dr. · Landover, MD 20785 · (240) 441-7066 ·
+          <a href="mailto:name@email.com">ektiva2013@gmail.com</a>
+        </div>
+        <p class="lead mb-5">I am a Software Engineer with experience building multi-tiered applications, created full-stack .NET Application 
+		with C#, Angular, MVC, SQL, JavaScript, HTML, and CSS. In addition, I have an in-depth understanding of Object-Oriented Programming, 
+		Agile development methodology, analysis, designs and SOLID principle. I’m a really motivated person and able to learn new technologies 
+		or concepts very fast.  I’m capable of handling multiple tasks and I have strong customer service skills.</p>
+        <div class="social-icons">
+          <a href="#">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+      <div class="w-100">
+        <h2 class="mb-5">Experience</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Software Engineer</h3>
+            <div class="subheading mb-3">Regency Management Services, LLC </div>
+            <p>Working in Agile environment with a team to build an online system to manage multiples furniture store.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">February 2020 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Software Engineer</h3>
+            <div class="subheading mb-3">Revature</div>
+            <p>Working with a team to build multi-tiered applications, created full-stack .NET Application with C#, Angular, MVC, SQL, JavaScript, HTML, CSS… </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2019 - January 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Walmart</h3>
+            <div class="subheading mb-3">Production Supervisor</div>
+            <p> Manage production team and Develop best practices, routines and innovative solutions to improve production rates and quality of output. </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2017 - June 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Polytechnics Industrial Services & Engineering</h3>
+            <div class="subheading mb-3">Industrial Engineer</div>
+            <p>Responsible of metrology and innovation department and supervision of a high performing team that is capable of analyzing, troubleshooting, and repairing broken equipment, as well as performing preventive maintenance tasks. </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">March 2014 - September 2017</span>
+          </div>
+        </div>
+		
+		<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">AMLA</h3>
+            <div class="subheading mb-3">Software Engineer</div>
+            <p>Analysis, Design and Implementation of a Gauging and Tank-Strapping Software (using Java & SQL) based on a volumetric approach and the information System of the Station, using scientific analysis and mathematical models.  </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2013 - February 2014</span>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+      <div class="w-100">
+        <h2 class="mb-5">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">National Advanced School of Engineering Yaounde</h3>
+            <div class="subheading mb-3">Master's Degree</div>
+            <div>Industrial Engineering</div>
+            <p>GPA: 3.26</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2010 - July 2013</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">University Of Yaounde 1</h3>
+            <div class="subheading mb-3">Bachelor </div>
+			<div>Mathematics</div>
+            <p>GPA: 3.01</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2004 - September 2008</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+      <div class="w-100">
+        <h2 class="mb-5">Skills</h2>
+
+        <div class="subheading mb-3">Programming Languages & Tools</div>
+        <ul class="list-inline dev-icons">
+		  <li class="list-inline-item">
+            <i class="fab fa-angular"></i>
+          </li>
+		  <li class="list-inline-item">
+            <i class="fab fa-github"></i>
+          </li>
+		  <li class="list-inline-item">
+            <i class="fab fa-js"></i>
+          </li>
+		  <li class="list-inline-item">
+            <i class="fab fa-bootstrap/css/bootstrap"></i>
+          </li>
+		  <li class="list-inline-item">
+            <i class="fab fa-java"></i>
+          </li>
+		  <li class="list-inline-item">
+            <i class="fab fa-aws"></i>
+          </li>
+		  <li class="list-inline-item">
+            <i class="fab fa-js"></i>
+          </li>
+		  <li class="list-inline-item">
+            <i class="fab fa-database"></i>
+          </li>
+		  <li class="list-inline-item">
+            <i class="fab fa-node-js"></i>
+          </li>
+		  <li class="list-inline-item">
+            <i class="fab fa-npm"></i>
+          </li>	
+		  <li class="list-inline-item">
+            <i class="fab fa-docker"></i>
+          </li>		  
+          <li class="list-inline-item">
+            <i class="fab fa-html5"></i>
+          </li>
+		  <li class="list-inline-item">
+            <i class="fab fa-python"></i>
+          </li> 		  
+          <li class="list-inline-item">
+            <i class="fab fa-wordpress"></i>
+          </li>
+		  <li class="list-inline-item">
+            <i class="fab fa-microsoft"><span>Azure</span></i>
+          </li>
+          
+        </ul>
+		
+		<div class="subheading mb-3">Workflow & Other Skills</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            .NET Core & Framework</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Csharp</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            ASP.NET MVC</li>
+			<li>
+            <i class="fa-li fa fa-check"></i>
+            API & web service</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Agile Development & Scrum</li>
+        </ul>
+      </div>
+		
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+      <div class="w-100">
+        <h2 class="mb-5">Interests</h2>
+        <p>Apart from being a software developer, I enjoy most of my time being with friends and family. I love helping people and I'm inspired by successfull people to grow personally.</p>
+        <p class="mb-0">I am an aspiring entrepreneur, and I spend a large amount of my free time exploring the latest technology advancements in the back-end and front-end web development world.</p>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="contact">
+      <div class="w-100">
+        <h2 class="mb-5">Contact Me</h2>
+        
+      </div>
+    </section>
+
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/resume.min.js"></script>
+
+</body>
+
+</html>
