--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 <body id="page-top">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+  <span class="myname" style="margin-bottom:-120px; margin-top:20px"> <b>Valentin Ekeu</b></span>
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Valentin Ekeu</span>
+      <span class="d-block d-lg-none"></span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -35,31 +36,48 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+	
+	<div class="presentation"><p>Hi, my name is Valentin Ekeu and I'm a software engineer. Welcome to my personal website!</p></div>
+	
+	
+	<div class="social-icons">
+          <a href="https://www.linkedin.com/in/valentin-ekeu-tiemeni" target="_blank">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://github.com/Ektiva" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.facebook.com/valentin.tiemeni.ekeu" target="_blank">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+    </div>
+	
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav" >
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">About Valentin</a>
+          <a class="nav-link js-scroll-trigger" href="#about"><i class="fas fa-user">    About Me</i></a>
+        </li>	
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experience"> <i class="fas fa-folder-open"> Experience </i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="#education"><i class="fas fa-graduation-cap"> Education </i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          <a class="nav-link js-scroll-trigger" href="#skills"> <i class="fas fa-code"> Skills </i></a>
         </li>
 		<li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+          <a class="nav-link js-scroll-trigger" href="#portfolio"><i class="fas fa-laptop-code"> Portfolio</i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#interests"> <i class="fas fa-tasks"> Interests</i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#contact">Contact Me</a>
+          <a class="nav-link js-scroll-trigger" href="#contact"> <i class="fas fa-envelope-open-text"> Contact Me </i></a>
         </li>
       </ul>
     </div>
+	
   </nav>
 
   <div class="container-fluid p-0">
@@ -76,17 +94,22 @@
 		with C#, Angular, MVC, SQL, JavaScript, HTML, and CSS. In addition, I have an in-depth understanding of Object-Oriented Programming, 
 		Agile development methodology, analysis, designs and SOLID principle. I’m a really motivated person and able to learn new technologies 
 		or concepts very fast.  I’m capable of handling multiple tasks and I have strong customer service skills.</p>
-        <div class="social-icons">
-          <a href="#">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </div>
+		
+		<div style="text-align:left;">
+			<hr style="background-color: #ffffff;">
+			<div class="form-style-5">
+			  <legend class="insetshadow"><span class="number">#</span>Back-end developer --> Best Of Me</legend>
+			  <label >C#, .Net, SQL, Java </label>
+			  <legend class="insetshadow"><span class="number">#</span>Front-end developer --> !Rokstar</legend>
+			  <label>Angular, JavaScript, HTML, CSS, JQuerry, Ajax, Bootstrap...</label>
+			  <legend class="insetshadow"><span class="number">#</span>Web designer --> Handyman</legend>
+			  <label>WOrdPress, Wix, Photoshop...</label>
+			  <legend class="insetshadow"><span class="number">#</span>Devops</legend>
+			  <label>AWS, Azure, Docker</label>
+			</div>
+		</div>
+		
+        
       </div>
     </section>
 
