--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body id="page-top">
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-  <span class="myname" style="margin-bottom:-120px; margin-top:20px"> <b>Valentin Ekeu</b></span>
+  <!--<span class="myname" style="margin-bottom:-180px; margin-top:20px"> <b>Valentin Ekeu</b></span>-->
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none"></span>
       <span class="d-none d-lg-block">
@@ -37,7 +37,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 	
-	<div class="presentation"><p>Hi, my name is Valentin Ekeu and I'm a software engineer. Welcome to my personal website!</p></div>
+	<!--<div class="presentation"><p>Hi, my name is Valentin Ekeu and I'm a software engineer. Welcome to my personal website!</p></div>-->
 	
 	
 	<div class="social-icons">
