some Link added

--- a/index.html
+++ b/index.html
@@ -365,16 +365,16 @@
 			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="images.html" target="_blank">View Demo</a> </legend>
 			</div>
 			<div class="form-style-5">
-			<h3 class="mb-0">My-Date</h3>
-			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Social Media application to connect people according to their interests </label>  </legend>
+			<h3 class="mb-0">aAffix</h3>
+			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Social Media application to connect people according to their interests, hobbies, profession and more. This is a personal project build from scratch by me for a comming business opportunity. </label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> C#, .Net, SQL Server, Angular, Coudinari, Azure devops... </label> </legend>
-			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <label class="textsmall"> View on github </label> </legend>
+			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="" target="blank"> Open on azure devops (Comming Soon) </a> </legend>
 			</div>
 			<div class="form-style-5">
 			<h3 class="mb-0">SAAFI</h3>
-			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Web based application to connect landlord and roomate </label>  </legend>
+			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Web based application to connect landlord and roomate. This project is a personal and non profit project I've build to help my community and all other immigrant avoid the issue I faced 2 years ago as a new immigrant. </label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> Wix </label> </legend>
-			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <label class="textsmall"> Open on Wix </label> </legend>
+			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="https://ektiva2013.wixsite.com/saafi" target="blank"> Open on Wix </a> </legend>
 			</div>
 			
 		</div>
