--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests"> <i class="fas fa-tasks"> Interests</i></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#contact"> <i class="fas fa-envelope-open-text"> Contact Me </i></a>
+          <a class="nav-link js-scroll-trigger" href="#contact"> <i class="fas fa-envelope-open-text"> Contact </i></a>
         </li>
       </ul>
     </div>
@@ -105,6 +105,7 @@
 					<p><i class="fas fa-home"></i> Landover, MD 20785</p> 
 					<p><i class="fas fa-phone-alt"></i> (240) 441-7066</p>
 				  <a href="mailto:ektiva2013@gmail.com"><i class="fas fa-at"></i> ektiva2013@gmail.com</a>
+				  <br>
 				</div>
 				
 			</div>
@@ -121,7 +122,7 @@
 				  
 				  <div class="button" id="button-3">
 					<div id="circle"></div>
-					<a class="buttontext" href="#"><i class="far fa-paper-plane"></i> Hire Me</a>
+					<a class="buttontext" href="#contact"><i class="far fa-paper-plane"></i> Hire Me</a>
 				  </div>
 
 				</div>
@@ -189,8 +190,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Walmart</h3>
-            <div class="subheading mb-3">Production Supervisor</div>
+            <h3 class="mb-0">Production Supervisor </h3>
+            <div class="subheading mb-3">Walmart </div>
             <p> Manage production team and Develop best practices, routines and innovative solutions to improve production rates and quality of output. </p>
           </div>
           <div class="resume-date text-md-right">
@@ -200,8 +201,8 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Polytechnics Industrial Services & Engineering</h3>
-            <div class="subheading mb-3">Industrial Engineer</div>
+            <h3 class="mb-0">Industrial Engineer  </h3>
+            <div class="subheading mb-3">Polytechnics Industrial Services & Engineering</div>
             <p>Responsible of metrology and innovation department and supervision of a high performing team that is capable of analyzing, troubleshooting, and repairing broken equipment, as well as performing preventive maintenance tasks. </p>
           </div>
           <div class="resume-date text-md-right">
@@ -211,8 +212,8 @@
 		
 		<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">AMLA</h3>
-            <div class="subheading mb-3">Software Engineer</div>
+            <h3 class="mb-0">Software Engineer</h3>
+            <div class="subheading mb-3">AMLA  </div>
             <p>Analysis, Design and Implementation of a Gauging and Tank-Strapping Software (using Java & SQL) based on a volumetric approach and the information System of the Station, using scientific analysis and mathematical models.  </p>
           </div>
           <div class="resume-date text-md-right">
@@ -362,7 +363,7 @@
 			<h3 class="mb-0">Baremax</h3>
 			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall">  software for Gauging and Tank-Strapping based on a volumetric approach </label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> Java#, SQL Server... </label> </legend>
-			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="images.html" target="_blank">View Demo</a> </legend>
+			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="doc/BareMaxOverview.pdf" target="_blank">View Demo</a> </legend>
 			</div>
 			<div class="form-style-5">
 			<h3 class="mb-0">aAffix</h3>
