--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5 text-center">Experience</h2>
-		<hr style="background-color: #ffffff;">
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Software Engineer</h3>
@@ -230,7 +229,6 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5 text-center">Education</h2>
-		<hr style="background-color: #ffffff;">
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">National Advanced School of Engineering Yaounde</h3>
@@ -263,7 +261,6 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100 ">
         <h2 class="mb-5 text-center">Skills</h2>
-		<hr style="background-color: #ffffff;">
         <div class="subheading mb-3">Programming Languages & Tools</div>
         <ul class="list-inline dev-icons">
 		  <li class="list-inline-item">
@@ -337,7 +334,6 @@
 	<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="portfolio">
 	  <div class="w-100 text-center">
 		<h2 class="mb-5">Portfolio</h2>	
-		<hr style="background-color: #ffffff;">
 		<div style="text-align:left;">
 			
 			<div class="form-style-5">
@@ -346,7 +342,6 @@
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> C#, .Net EntityFramework, SQL Server, Angular, Kafka, Docker, Azure Devops... </label> </legend>
 			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <label class="textsmall" href=""> View on github (Private)</label> </legend>
 			</div>
-			<hr style="background-color: #ffffff;">
 			<div class="form-style-5">
 			<h3 class="mb-0">A-Bank</h3>
 			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Web based banking application </label>  </legend>
@@ -399,7 +394,7 @@
 			    <h2 class="heading">Contact</h2>
 			    <div class="intro">
 			    <p>Interested in hiring me for your project or just want to say hi? You can send me an email to <a href="mailto:#">ektiva2013@gmail.com</a> with Subject <b>[FromValentinWebsite]-yoursubject</b></p>
-			    <p>I'm only open for <b>Freelance </b> or <b>Full Time position</b> </p>
+			    <p>I'm only open for <b>Freelance </b> or <b>Full Time position.</b> I can't pick any call without previous email explaining your interest</p>
 				<p>Want to get connected? Follow me on the social channels below.</p>
 			    <ul class="list-inline mb-0">
 		            <!--<li class="list-inline-item mb-3"><a class="twitter" href="#"><svg class="svg-inline--fa fa-twitter fa-w-16 fa-fw fa-lg" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path></svg><!-- <i class="fab fa-twitter fa-fw fa-lg"></i> --</a></li>-->
