--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 					  <label class="text-muted">C#, .Net, SQL, Java </label>
 					  <legend class="mydefinition"><span class="number"></span><i class="fas fa-check-circle"> </i> Front-end developer <font color = #258e74>#!Rokstar </font></legend>
 					  <label class="text-muted">Angular, JavaScript, HTML, CSS, JQuerry, Ajax, Bootstrap...</label>
-					  <legend class="mydefinition"><span class="number"></span><i class="fas fa-check-circle"> </i> Web designer <font color = #258e74>#Handyman </font></legend>
-					  <label class="text-muted">WordPress, Wix, Photoshop...</label>
+					  <legend class="mydefinition"><span class="number"></span><i class="fas fa-check-circle"> </i> Web designer & Devops <font color = #258e74>#Handyman </font></legend>
+					  <label class="text-muted">WordPress, Wix, Photoshop - AWS, Azure, Docker, Cloudinary</label>
 					  <!--<legend class="mydefinition"><span class="number"></span><i class="fas fa-check-circle"> </i> Devops</legend>
 					  <label class="text-muted">AWS, Azure, Docker</label>-->
 					</div>
