--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </nav>
 
   <div class="container-fluid p-0">
-	<hr class="m-0">
+	<hr class="m-0 firstline">
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about" >
 		<div class="row featurette" >
 			<div class="col-md-7" >			  
