--- a/index.html
+++ b/index.html
@@ -352,19 +352,22 @@
 			<h3 class="mb-0">Pizza Parlor</h3>
 			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> 24-hour pizza ordering and delivery service application </label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> C#, .Net EntityFramework, SQL Server, ASP.NET MVC... </label> </legend>
-			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <label class="textsmall" href=""> View on github (Private)</label> </legend>
+			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="https://github.com/nod-codeman/VmanPizza-Angular" target="blank"> View on github </a> </legend>
 			</div>
 			<div class="form-style-5">
 			<h3 class="mb-0">Baremax</h3>
 			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall">  software for Gauging and Tank-Strapping based on a volumetric approach </label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> Java#, SQL Server... </label> </legend>
-			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="doc/BareMaxOverview.pdf" target="_blank">View Demo</a> </legend>
+			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="doc/BareMaxOverview.pdf" target="blank">View Demo</a> </legend>
 			</div>
 			<div class="form-style-5">
 			<h3 class="mb-0">aAffix</h3>
-			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Social Media application to connect people according to their interests, hobbies, profession and more. This is a personal project build from scratch by me for a comming business opportunity. </label>  </legend>
-			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> C#, .Net, SQL Server, Angular, Coudinari, Azure devops... </label> </legend>
-			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="" target="blank"> Open on azure devops (Comming Soon) </a> </legend>
+			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Social Media application to connect people according to their interests. User can sign in, upload photos, chat with their matches, like photos of other users...  </label>  </legend>
+			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> C#, .Net, SQL Server, SQLite, Angular, Cloudinary, Azure devops, Bootstrap... </label> </legend>
+			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="https://aaffix.azurewebsites.net" target="blank"> Open on azure devops </a> </legend>
+			  <legend class="mydefinition"><i class="fab fa-github"></i><a class="textsmall" href="https://github.com/Ektiva/MyDate" target="blank"> View on github </a> </legend>
+			  <i class="fas fa-highlighter"></i><a class="textsmall"> This is a personal project build in order to master Angular and .Net Core Entity Framework. For good testing experience open the link in desktop. Responsive Design isn't implement. To test the application 
+			  You can register or login as Username: user1, Password: password</a> 
 			</div>
 			<div class="form-style-5">
 			<h3 class="mb-0">SAAFI</h3>
