--- a/index.html
+++ b/index.html
@@ -297,6 +297,17 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5 text-center">Education</h2>
+		<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Revature</h3>
+            <div class="subheading mb-3">Software Engineering Bootcamp</div>
+            <div>Full stack .Net and Angular developer</div>
+            <p>Technologies: .Net, Angular, Docker, Azure Devops, API, Web Services, SQL, C#..  </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2010 - July 2013</span>
+          </div>
+        </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">National Advanced School of Engineering Yaounde</h3>
