--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <h3 class="mb-0">Software Engineer</h3>
             <div class="subheading mb-3">Regency Management Services, LLC </div>
             <p>Working in Agile environment with a team to build an online system to manage multiples furniture stores distributed in several sales division and sales district.</p>
-			<a> <i class="fas fa-tasks"></i> <em><b> Responsabilities</b> </em></a>
+			<a> <i class="fas fa-tasks"></i> <em><b> responsibilities</b> </em></a>
 			<ul>
 			  <li>Analyze user requirements from the Scrum Master and convert it to design documents.</li>
 			  <li>Designed and implemented Auth Gateway for authentication by scaffolding ASP.Net identity.</li>
@@ -217,7 +217,7 @@
             <h3 class="mb-0">Software Engineer</h3>
             <div class="subheading mb-3">Revature</div>
             <p>Working with a team to build multi-tiered applications, created full-stack .NET Application with C#, Angular, MVC, SQL, JavaScript, HTML, CSS… </p>
-			<a> <i class="fas fa-tasks"></i> <em><b> Responsabilities</b> </em></a>
+			<a> <i class="fas fa-tasks"></i> <em><b> responsibilities</b> </em></a>
 			<ul>
 			  <li>Involved and participated in the overall application lifecycle of 2 mains projects</li>
 			  <li>Designed and implemented the MVC design pattern of <a href="#pizzaparlor">pizza parlor</a> project</li>
@@ -268,7 +268,7 @@
             <h3 class="mb-0">Software Engineer</h3>
             <div class="subheading mb-3">AMLA  </div>
             <p>Analysis, Design and Implementation of a Gauging and Tank-Strapping Software (using Java & SQL) based on a volumetric approach and the information System of the Station, using scientific analysis and mathematical models.  </p>
-			<a> <i class="fas fa-tasks"></i> <em><b> Description & Responsabilities</b> </em></a>
+			<a> <i class="fas fa-tasks"></i> <em><b> Description & responsibilities</b> </em></a>
 			<ul>
 			  <li>Designed the entire application using UML and OOP design pattern.</li>
 			  <li>Get user requirement from the company COO and translate into technical requirements.</li>
