--- a/index.html
+++ b/index.html
@@ -219,16 +219,16 @@
             <p>Working with a team to build multi-tiered applications, created full-stack .NET Application with C#, Angular, MVC, SQL, JavaScript, HTML, CSS… </p>
 			<a> <i class="fas fa-tasks"></i> <em><b> responsibilities</b> </em></a>
 			<ul>
-			  <li>Involved and participated in the overall application lifecycle of 2 mains projects</li>
-			  <li>Designed and implemented the MVC design pattern of <a href="#pizzaparlor">pizza parlor</a> project</li>
-			  <li>Writing, implementing and testing code, refining and rewriting it as necessary. </li>
-			  <li>Tested functionality with unit tests written using Visual Studio NUnit Test .Net core. </li>
-			  <li>Resolve complex technical design issues (Date problem, EF migration, many to many relationship, communications between model-view-controller...)</li>	 
-			  <li>Designed and Build reactive Angular front-ends  using custom services to asynchronously deliver RxJS Observables with data from HttpClient calls to API.(<a href="#abank">a-bank</a> project)</li>
-			  <li>Implement  a Restfull API using HttpClient and call the API from Angular.</li>
+			  <li> Involved and participated in the overall application lifecycle of 2 mains projects</li>
+			  <li> Designed and implemented the MVC design pattern of <a href="#pizzaparlor">pizza parlor</a> project</li>
+			  <li> Writing, implementing and testing code, refining and rewriting it as necessary. </li>
+			  <li> Tested functionality with unit tests written using Visual Studio NUnit Test .Net core. </li>
+			  <li> Resolve complex technical design issues (Date problem, EF migration, many to many relationship, communications between model-view-controller...)</li>	 
+			  <li> Designed and Build reactive Angular front-ends  using custom services to asynchronously deliver RxJS Observables with data from HttpClient calls to API.(<a href="#abank">a-bank</a> project)</li>
+			  <li> Develope and consume(from Angular) REST (WebAPI) and SOAP (WCF) based services.</li>
 			  <li> Tested the API with Postman, visit Can I Use to optimize HTTML code and user browser experience.</li>
 			  <li> Managed source code and collaborate with team using Git and slack.</li>
-			  <li>Set Up local container registry for test deployments/builds.</li> 
+			  <li> Set Up local container registry for test deployments/builds.</li> 
 			</ul>
 			<a> <i class="fas fa-project-diagram"></i> <em><b> Projects</b> </em></a>
 			<ul>
