--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ based on HierarchyId in SQL Server.</label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="doc/BareMaxOverview.pdf" target="blank">View Demo</a> </legend>
 			</div>
 			<div class="form-style-5">
-			<h3 class="mb-0" id="aaffix">Blind-Love</h3> <span>Still Under Development</span>
+			<h3 class="mb-0" id="aaffix">Blind-Love</h3> <span style="color: red">Still Under Development</span>
 			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Dating application to connect people according to their interests, locations (No pictures). User can login/register, choose an avatar, like other users to add them as contact, chat with their contacts and so on...  </label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> C#, .Net, SQL Server, SQLite, Angular, TypeScript, Cloudinary, Azure devops, Bootstrap, 
 			  Angular 3rd party components and advanced notions(AlertifyJS, Angular JWT, NGX Boostrap, Bootswatch, ngx-gallery, ng2-file-upload, time-ago-pipe, auth0/angular-jwt, resolver, route guard, services, observable/subscribe), JWT, Token authentication, C# extentions and advanced notions (Automapper, Fluent API, JSON generator, CORS, Repository pattern, Paging, Filtering and Sorting, Action Filter), Cloudinary, Lazy Loading, Reactive form, publishing in Azure, ... </label> </legend>
