--- a/index.html
+++ b/index.html
@@ -189,19 +189,19 @@
 			<a> <i class="fas fa-tasks"></i> <em><b> responsibilities</b> </em></a>
 			<ul>
 			  <li>Analyze user requirements from the Scrum Master and convert it to design documents.</li>
-			  <li>Designed and implemented Auth Gateway for authentication by scaffolding <b>ASP.Net identity.</b></li>
-			  <li>Elaborate the <b>Coding Standards</b> and Best Programming Practices for the team.</li>
-			  <li>Designed and implemented the model(user, domain, department...) including the <b>hierarchyId type</b> and <b>fluent validation</b>.</li>
-			  <li>Create the initial database instance using <b>EF code first</b>  and write consistent <b>LINQ query</b> to access <b>SQL Server database</b>.</li>
-			  <li>Implement <b>RESTful ASP.NET Web APIs</b> using <b>HttpClient</b> and <b>Ajax</b> to communicate with database.</li>
-			  <li> Tested the API with <b>Postman</b> and ensure that data is presented in <b>JSON</b> format</li> 
-			  <li>Managed database structure using <b>Fluid API</b> and data formatting with <b>Data Annotations</b> including <b>Regex</b>.  </li>
-			  <li>Completed unit and integration testing with <b>MSTest</b> and <b>xUnit</b> unit tests in C#, with <b>Swagger</b> for API and with <b>Jasmine-based</b> tests run with <b>Karma</b> in Angular. </li>
-			  <li>Configure and use <b>azure pipeline for CI/CD</b>, Setup and managed <b>azure app insight</b> to monitor the lives applications. </li>
-			  <li>Build a reactive and responsive <b>UI</b> for the client side login, registration and merchandize with <b>Angular 8</b>. </li>	
-			  <li>Setup and implemented <b>azure service bus (topic and queue)</b> for asynchronous transfer of data and state between our different services. </li>	
-			  <li>Design and implemented the <b>repository pattern</b>. </li>
-			  <li>Override the <b>OnModelCreating</b> method and use the <b>ModelBuilder API</b> to configure our model.  </li>
+			  <li>Designed and implemented Auth Gateway for authentication by scaffolding ASP.Net identity.</li>
+			  <li>Elaborate the Coding Standards and Best Programming Practices for the team.</li>
+			  <li>Designed and implemented the model(user, domain, department...) including the hierarchyId type and fluent validation.</li>
+			  <li>Create the initial database instance using EF code first  and write consistent LINQ query to access SQL Server database.</li>
+			  <li>Implement RESTful ASP.NET Web APIs using HttpClient and Ajax to communicate with database.</li>
+			  <li> Tested the API with Postman and ensure that data is presented in JSON format</li> 
+			  <li>Managed database structure using Fluid API and data formatting with Data Annotations including Regex.  </li>
+			  <li>Completed unit and integration testing with MSTest and xUnit unit tests in C#, with Swagger for API and with Jasmine-based tests run with Karma in Angular. </li>
+			  <li>Configure and use azure pipeline for CI/CD, Setup and managed azure app insight to monitor the lives applications. </li>
+			  <li>Build a reactive and responsive UI for the client side login, registration and merchandize with Angular 8. </li>	
+			  <li>Setup and implemented azure service bus (topic and queue) for asynchronous transfer of data and state between our different services. </li>	
+			  <li>Design and implemented the repository pattern. </li>
+			  <li>Override the OnModelCreating method and use the ModelBuilder API to configure our model.  </li>
 			</ul>
 			<a> <i class="fas fa-project-diagram"></i> <em><b> Projects</b> </em></a>
 			<ul>
