--- a/index.html
+++ b/index.html
@@ -452,12 +452,13 @@ based on HierarchyId in SQL Server.</label>  </legend>
 			<div class="form-style-5">
 			<h3 class="mb-0" id="aaffix">Blind-Love</h3> <span style="color: red">Still Under Development</span>
 			  <legend class="mydefinition"><i class="fas fa-info-circle"></i> <label class="textsmall"> Dating application to connect people according to their interests, locations (No pictures). User can login/register, choose an avatar, like other users to add them as contact, chat with their contacts and so on...  </label>  </legend>
+			  <legend class="mydefinition"> <label class="textsmall"> <b> The purpose of this web application is to help millions of singles around the world to find love anonymously without being ashamed anymore of being recognized by their relatives (friends, family...). </b> </label>  </legend>
 			  <legend class="mydefinition"><i class="fas fa-keyboard"></i> <label class="textsmall"> C#, .Net, SQL Server, SQLite, Angular, TypeScript, Cloudinary, Azure devops, Bootstrap, 
 			  Angular 3rd party components and advanced notions(AlertifyJS, Angular JWT, NGX Boostrap, Bootswatch, ngx-gallery, ng2-file-upload, time-ago-pipe, auth0/angular-jwt, resolver, route guard, services, observable/subscribe), JWT, Token authentication, C# extentions and advanced notions (Automapper, Fluent API, JSON generator, CORS, Repository pattern, Paging, Filtering and Sorting, Action Filter), Cloudinary, Lazy Loading, Reactive form, publishing in Azure, ... </label> </legend>
 			  <legend class="mydefinition"><i class="fas fa-code-branch"></i> <a class="textsmall" href="https://blind-love.azurewebsites.net/" target="blank"> Open on azure devops </a> </legend>
 			  <legend class="mydefinition"><i class="fab fa-github"></i><a class="textsmall" href="https://github.com/Ektiva/MyDate" target="blank"> View on github </a> </legend>
-			  <i class="fas fa-highlighter"></i><a class="textsmall"> This is a personal project build from scratch by me in order to master Angular and .Net Core Entity Framework. For good testing experience open the link in desktop. Responsive Design isn't implement. To test the application 
-			  You can register or login as Username: Ektiva, Password: Pa$$w0rd</a> 
+			  <a class="textsmall"> <i class="fas fa-highlighter"></i>  This is a personal project build from scratch by me in order to first master Angular and .Net Core Entity Framework, then to help singles around the world. </a> 
+			  <p class="textsmall"> <i class="fas fa-highlighter"></i>  To test you can open the azure link above and register or login as <b>- Username: Ektiva, Password: Pa$$w0rd </b> </p> 
 			</div>
 			<div class="form-style-5">
 			<h3 class="mb-0" id="saafi">SAAFI</h3>
