--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <p>Working in Agile environment with a team to build an online system to manage multiples furniture stores distributed in several sales division and sales district.</p>
 			<a> <i class="fas fa-tasks"></i> <em><b> responsibilities</b> </em></a>
 			<ul>
-			  <li>Analyze user requirements from the Scrum Master and convert it to design documents.</li>
+			  <li>Research, evaluate, recommend, and implement technical solutions</li>
 			  <li>Designed and implemented Auth Gateway for authentication by scaffolding ASP.Net identity.</li>
 			  <li>Elaborate the Coding Standards and Best Programming Practices for the team.</li>
 			  <li>Designed and implemented the model(user, domain, department...) including the hierarchyId type and fluent validation.</li>
@@ -218,7 +218,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Software Engineer</h3>
             <div class="subheading mb-3">Revature</div>
-            <p>Working with a team to build multi-tiered applications, created full-stack .NET Application with C#, Angular, MVC, SQL, JavaScript, HTML, CSS… </p>
+            <p>Full Stack development including design, coding, unit testing, integration testing, debugging, configuring, and documenting of software solutions using .Net(C#), Angular, ASP .NET MVC, SQL, Azure Devops, JavaScript, HTML, CSS…</p>
 			<a> <i class="fas fa-tasks"></i> <em><b> responsibilities</b> </em></a>
 			<ul>
 			  <li> Involved and participated in the overall application lifecycle of 2 mains projects</li>
@@ -229,7 +229,7 @@
 			  <li> Designed and Build reactive Angular front-ends  using custom services to asynchronously deliver RxJS Observables with data from HttpClient calls to API.(<a href="#abank">a-bank</a> project)</li>
 			  <li> Develope and consume(from Angular) REST (WebAPI) and SOAP (WCF) based services.</li>
 			  <li> Tested the API with Postman, visit Can I Use to optimize HTTML code and user browser experience.</li>
-			  <li> Managed source code and collaborate with team using Git and slack.</li>
+			  <li> Collaborate with colleagues (using Git/Github and slack) to ensure successful implementation of changes to existing system.</li>
 			  <li> Set Up local container registry for test deployments/builds.</li> 
 			</ul>
 			<a> <i class="fas fa-project-diagram"></i> <em><b> Projects</b> </em></a>
